--- a/application.css
+++ b/application.css
@@ -4,10 +4,23 @@
 	border: 0;
 }
 
-.highlight {
-	background-color: orange;
+.transition {
+	-webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .square {
 	float: left;
+}
+
+button {
+	display: block;
+	width: 100%;
+	height: 50px;
+	background-color: #faebd7;
+	border-radius: 5px;
+	font-size: 1.5em;
+	color: rgb(150	, 150, 150);
 }
